# printer-driver-alc1100

./: AUTHORS  ChangeLog  Epson-ALC1100-filter-1.2.tar.gz.delta  Epson-ALC1100-filter-1.2.tar.gz.id  Epson-ALC1100-filter.spec  Makefile.am  Makefile.in  README  README-alc1100  README-alc1100-CUPS  alc1100  alc1100_lprwrapper.sh  configure  configure.ac  option.conf  pstoalc1100.sh
debian/: README.Debian  README.source  changelog  control  copyright  docs  gbp.conf  printer-driver-alc1100.dirs  printer-driver-alc1100.install  printer-driver-alc1100.lintian-overrides  rules  source.lintian-overrides
